--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+@import "variables";
+
+body {
+  margin: 0 !important;
+  overflow: hidden;
+}
+
+.mat-sidenav-content {
+  min-height: 100vh;
+}
+
+.content-container {
+  position: relative;
+
+  router-outlet ~ * {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+  }
+}
+
+form {
+  min-width: 150px;
+  width: 100%;
+  position: center;
+}
+
+mat-form-field {
+  padding: 5px 0px 25px 2px;
+  width: 100%;
+}
+
+.actions {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+
+  button {
+    width: 100px;
+    height: 40px;
+    color: white !important;
+    margin: 5px;
+    padding: 10px;
+  }
+}
