Created views for all job ads, job ad cards and job ad table view; Added css styles

--- a/src/app/job-ad/components/job-ad-form/job-ad-form.component.html
+++ b/src/app/job-ad/components/job-ad-form/job-ad-form.component.html
@@ -64,7 +64,7 @@
     </button>
 
     <button
-      *ngIf="_job"
+      *ngIf="_jobAd"
       mat-flat-button
       color="primary"
       (click)="onSave('archived')"
