--- a/src/app/job-ad/containers/add-job-ad/add-job-ad.component.html
+++ b/src/app/job-ad/containers/add-job-ad/add-job-ad.component.html
@@ -1,3 +1,3 @@
 <app-panel-content [title]="'Add job ad'" [isContainer]="false" [icon]="'add'" [haveAction]="false">
-  <app-job-form></app-job-form>
+  <app-job-ad-form></app-job-ad-form>
 </app-panel-content>
