--- a/src/app/shared/components/panel-content/panel-content.component.html
+++ b/src/app/shared/components/panel-content/panel-content.component.html
@@ -1,13 +1,16 @@
-<div [class]="isContainer ? 'panel-is-container' : 'panel-no-container'">
-  <mat-card class="mat-elevation-z8 job-card">
+<div class="panel-container" [class]="isContainer ? 'panel-is-container' : 'panel-no-container'">
+  <mat-card class="mat-elevation-z8 panel-card">
     <mat-card-header>
       <mat-card-title>{{title}}</mat-card-title>
       <mat-card-actions *ngIf="haveAction">
+        <ng-content select="[action]"></ng-content>
         <button mat-fab (click)="onClick()" color="primary" class="button-panel">
           <mat-icon class="icon-panel">{{icon}}</mat-icon>
         </button>
       </mat-card-actions>
     </mat-card-header>
-    <ng-content></ng-content>
+    <mat-card-content>
+      <ng-content></ng-content>
+    </mat-card-content>
   </mat-card>
 </div>
