--- a/src/app/core/components/main-panel/side-nav/side-nav.component.html
+++ b/src/app/core/components/main-panel/side-nav/side-nav.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #sideNav
-               mode="side"
+               mode="over"
                id="sidenav"
                [opened]="opened"
                class="item-sidenav mat-elevation-z8">
