--- a/src/app/core/components/main-panel/side-nav/side-nav.component.scss
+++ b/src/app/core/components/main-panel/side-nav/side-nav.component.scss
@@ -17,6 +17,14 @@
   background-color: #f2f2f2 !important;
   padding: 15px 15px 0 15px;
   overflow-y: hidden;
+  position: relative;
+
+  router-outlet ~ * {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+  }
 }
 
 mat-sidenav-container {
