--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,17 +10,6 @@ body {
   min-height: 100vh;
 }
 
-.content-container {
-  position: relative;
-
-  router-outlet ~ * {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-  }
-}
-
 form {
   min-width: 150px;
   width: 100%;
@@ -32,16 +21,10 @@ mat-form-field {
   width: 100%;
 }
 
-.actions {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-
-  button {
-    width: 100px;
-    height: 40px;
-    color: white !important;
-    margin: 5px;
-    padding: 10px;
+@media (max-width: 767px) {
+  .mat-mdc-paginator-page-size {
+    display: none !important;
+    justify-content: center;
   }
 }
+
