--- a/frontend/src/app/job-ad/components/view-job-ads/view-job-ads.component.html
+++ b/frontend/src/app/job-ad/components/view-job-ads/view-job-ads.component.html
@@ -1,5 +1,6 @@
 <app-panel-content
   [title]="'Job ads'"
+  [tooltip]="'Add new job ad'"
   [haveAction]="true"
   [icon]="'add'"
   [isContainer]="true"
