--- a/frontend/src/app/job-ad/components/view-job-ads/job-ad-table/job-ad-table.component.html
+++ b/frontend/src/app/job-ad/components/view-job-ads/job-ad-table/job-ad-table.component.html
@@ -14,7 +14,15 @@
 
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef>Description</th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      <td mat-cell *matCellDef="let element">
+        <p *ngIf="element.description.length > 200; else shorterDescription"
+           matTooltip="{{element.description.slice(0,element.description.length)}}">{{element.description.slice(0, 200)}}
+          ...
+        </p>
+        <ng-template #shorterDescription>
+          <p>{{element.description}}</p>
+        </ng-template>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="skills">
