--- a/frontend/src/app/shared/components/panel-content/panel-content.component.html
+++ b/frontend/src/app/shared/components/panel-content/panel-content.component.html
@@ -1,10 +1,10 @@
 <div class="panel-container" [class]="isContainer ? 'panel-is-container' : 'panel-no-container'">
   <mat-card class="mat-elevation-z8 panel-card">
     <mat-card-header>
-      <mat-card-title>{{title}}</mat-card-title>
+      <mat-card-title class="title">{{title}}</mat-card-title>
       <mat-card-actions *ngIf="haveAction">
         <ng-content select="[action]"></ng-content>
-        <button mat-fab (click)="onClick()" color="primary" class="button-panel">
+        <button [matTooltip]="tooltip" mat-fab (click)="onClick()" color="primary" class="button-panel">
           <mat-icon class="icon-panel">{{icon}}</mat-icon>
         </button>
       </mat-card-actions>
