--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -11,13 +11,13 @@ body {
 }
 
 form {
-  min-width: 150px;
+  //min-width: 150px;
   width: 100%;
   position: center;
 }
 
 mat-form-field {
-  padding: 5px 0px 25px 2px;
+  padding: 0 5px 20px 0;
   width: 100%;
 }
 
