Re-organisation of project structure; Added new logic for calling actions from table or cards

--- a/frontend/src/app/core/components/main-panel/navigation-item/navigation-item.component.html
+++ b/frontend/src/app/core/components/main-panel/navigation-item/navigation-item.component.html
@@ -8,6 +8,6 @@
   <div style="display: flex">
     <mat-icon>{{navigationItem.icon}}</mat-icon>
     <div class="item-selector"></div>
-    <div>{{navigationItem.title}}</div>
+    <div>{{navigationItem.title | uppercase}}</div>
   </div>
 </a>
