--- a/frontend/src/app/job-ad/components/job-ad-form/job-ad-form.component.html
+++ b/frontend/src/app/job-ad/components/job-ad-form/job-ad-form.component.html
@@ -17,27 +17,10 @@
       <mat-error *ngIf="description?.errors?.['minlength']">Description must be at least 10 characters long.</mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Skills</mat-label>
-      <mat-chip-grid #chipGrid aria-label="Enter skills" formControlName="skills">
-        <mat-chip-row *ngFor="let skill of chipSkills"
-                      (removed)="remove(skill)"
-                      [editable]="true"
-                      (edited)="edit(skill, $event)"
-                      [aria-description]="'press enter to edit ' + skill">
-          {{skill}}
-          <button matChipRemove [attr.aria-label]="'remove ' + skill">
-            <mat-icon>cancel</mat-icon>
-          </button>
-        </mat-chip-row>
-        <input placeholder="New skill..."
-               [matChipInputFor]="chipGrid"
-               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-               [matChipInputAddOnBlur]="addOnBlur"
-               (matChipInputTokenEnd)="add($event)">
-      </mat-chip-grid>
-      <mat-error *ngIf="skills?.errors?.['required']">Skill is required.</mat-error>
-    </mat-form-field>
+    <app-chip-text-input
+      [fc]="formGroup.controls.skills"
+      [chipItems]="chipSkills">
+    </app-chip-text-input>
 
   </form>
 
@@ -45,6 +28,7 @@
     <button
       mat-flat-button
       color="primary"
+      *ngIf="_jobAd?.status === 'draft' || !_jobAd"
       (click)="onSave('draft')"
       [disabled]="!formGroup.valid">
       Save as Draft
@@ -53,13 +37,14 @@
     <button
       mat-flat-button
       color="primary"
+      *ngIf="_jobAd?.status === 'draft' || _jobAd?.status === 'published' || !_jobAd"
       (click)="onSave('published')"
       [disabled]="!formGroup.valid">
-      Save & Publish
+      Publish
     </button>
 
     <button
-      *ngIf="_jobAd"
+      *ngIf="_jobAd?.status === 'published'"
       mat-flat-button
       color="primary"
       (click)="onSave('archived')"
