--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -28,3 +28,12 @@ mat-form-field {
   }
 }
 
+.red-snackbar {
+  background-color: darkred;
+  color: white;
+}
+
+.green-snackbar {
+  background-color: darkgreen;
+  color: white;
+}
