--- a/frontend/src/app/job-ad/components/job-ad-table/job-ad-table.component.html
+++ b/frontend/src/app/job-ad/components/job-ad-table/job-ad-table.component.html
@@ -54,38 +54,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button [matMenuTriggerFor]="menu">
-          <mat-icon>more_horiz</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button
-            mat-menu-item
-            (click)="viewJob(element)">
-            <mat-icon>remove_red_eye</mat-icon>
-            <span>Preview</span>
-          </button>
-          <button
-            *ngIf="element.status === 'draft' || element.status === 'published'"
-            mat-menu-item
-            (click)="editJob(element)">
-            <mat-icon>edit</mat-icon>
-            <span>Edit</span>
-          </button>
-          <button
-            *ngIf="element.status === 'draft'"
-            mat-menu-item
-            (click)="publishJob(element)">
-            <mat-icon>publish</mat-icon>
-            <span>Publish</span>
-          </button>
-          <button
-            *ngIf="element.status === 'draft' || element.status === 'published'"
-            mat-menu-item
-            (click)="archiveJob(element)">
-            <mat-icon>archive</mat-icon>
-            <span>Archive</span>
-          </button>
-        </mat-menu>
+        <app-menu [menuItems]="menuItems" [element]="element"></app-menu>
       </td>
     </ng-container>
 
