--- a/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.html
+++ b/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div>
+  <div *ngIf="dataSource.data.length > 0; else noData">
     <ng-container *ngIf="tableView">
       <app-job-ad-table
         [menuItems]="menuItems"
@@ -40,9 +40,15 @@
     <ng-container *ngIf="cardView">
       <app-job-ad-cards
         [menuItems]="menuItems"
-        [jobAds]="jobAds | async">
+        [jobAds]="dataSource.data">
       </app-job-ad-cards>
     </ng-container>
-    <mat-paginator [pageSizeOptions]="[6,12,24]"></mat-paginator>
+    <mat-paginator
+      (page)="changePagination($event)"
+      [pageSizeOptions]="[6,12,24]">
+    </mat-paginator>
   </div>
+  <ng-template #noData>
+    No data for job ads to show.
+  </ng-template>
 </app-panel-content>
