--- a/frontend/src/app/job-ad/modal/view-job-ad/view-job-ad-dialog.component.html
+++ b/frontend/src/app/job-ad/modal/view-job-ad/view-job-ad-dialog.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="jobAd$ | async as jobAd">
+<ng-container *ngrxLet="jobAd$ | async as jobAd">
   <h2 mat-dialog-title>
     <span>{{jobAd.title}}</span>
   </h2>
