--- a/frontend/src/app/shared/components/select-text-input/select-text-input.component.html
+++ b/frontend/src/app/shared/components/select-text-input/select-text-input.component.html
@@ -2,7 +2,7 @@
   <mat-form-field appearance="outline">
     <mat-label>Status</mat-label>
     <mat-select [formControl]="fc" multiple (selectionChange)="onSelectedItem()">
-      <mat-option *ngFor="let item of items" [value]="item">{{item}}</mat-option>
+      <mat-option *ngFor="let item of items" [value]="item">{{item | titlecase}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
