--- a/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.html
+++ b/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.html
@@ -23,6 +23,7 @@
     </div>
     <div class="item">
       <app-select-text-input
+        [isMultiple]="true"
         *ngIf="formGroup.controls.status"
         [fc]="formGroup.controls.status"
         [items]="statuses">
