--- a/frontend/src/app/shared/components/select-text-input/select-text-input.component.html
+++ b/frontend/src/app/shared/components/select-text-input/select-text-input.component.html
@@ -1,7 +1,7 @@
 <div>
   <mat-form-field appearance="outline">
     <mat-label>Status</mat-label>
-    <mat-select [formControl]="fc" multiple (selectionChange)="onSelectedItem()">
+    <mat-select [formControl]="fc" [multiple]="isMultiple" (selectionChange)="onSelectedItem()">
       <mat-option *ngFor="let item of items" [value]="item">{{item | titlecase}}</mat-option>
     </mat-select>
   </mat-form-field>
