--- a/frontend/src/app/core/components/main-panel/navigation-item/navigation-item.component.scss
+++ b/frontend/src/app/core/components/main-panel/navigation-item/navigation-item.component.scss
@@ -5,8 +5,7 @@
   border-radius: 0 32px 32px 0;
   overflow-x: hidden;
   width: 95%;
-  font-weight: 400;
-  color: white;
+  color: white !important;
 
   &:focus {
     background: transparent;
@@ -15,6 +14,7 @@
   &:hover {
     background-color: transparentize($primaryColor, 0.96);
     border-color: transparentize($primaryColor, 0.96);
+
     .item-selector {
       transform: translateX(-5px);
     }
@@ -27,8 +27,37 @@
     left: -100%;
     background-color: black;
   }
+
+  .mat-icon {
+    color: white;
+  }
+
+  .navigation-title {
+    color: white;
+    font-weight: 500;
+  }
+
+  .mat-divider {
+    margin: 0 20px;
+    background-color: white;
+    width: 1px;
+  }
 }
 
 .active-link {
   background-color: white !important;
+  pointer-events: none;
+  cursor: default;
+
+  .mat-icon {
+    color: $primaryColor !important;
+  }
+
+  .navigation-title {
+    color: $primaryColor !important;
+  }
+
+  .mat-divider {
+    background-color: $primaryColor !important;
+  }
 }
