--- a/frontend/src/app/job-ad/components/job-ad-cards/job-ad-cards.component.scss
+++ b/frontend/src/app/job-ad/components/job-ad-cards/job-ad-cards.component.scss
@@ -3,7 +3,7 @@
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   overflow-y: auto;
   max-height: 50vh;
 }
@@ -58,13 +58,14 @@
   }
 }
 
-@media screen and (max-width: 767px) {
-  .card-container {
-    max-height: 40vh;
-  }
-  .card {
-    flex-basis: 100%;
-  }
+mat-card-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+mat-card-header {
+  padding: 5px 10px;
+  display: block;
 }
 
 mat-card-footer {
@@ -75,4 +76,33 @@ mat-card-footer {
 mat-card-header {
   padding: 5px 10px;
   display: block;
+}
+
+@media screen and (max-width: 480px) {
+  .card-container {
+    max-height: 30vh;
+    display: grid;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .card-container {
+    max-height: 30vh;
+    display: grid;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+  .card-container {
+    max-height: 45vh;
+    display: grid;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
+  .card-container {
+    max-height: 50vh;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
