--- a/frontend/src/app/job-ad/modal/view-job-ad/view-job-ad-dialog.component.html
+++ b/frontend/src/app/job-ad/modal/view-job-ad/view-job-ad-dialog.component.html
@@ -1,21 +1,15 @@
 <ng-container *ngrxLet="jobAd$ | async as jobAd">
   <h2 mat-dialog-title>
-    <span>{{jobAd?.title}}</span>
+    {{jobAd?.title}}
   </h2>
-  <mat-dialog-content class="mat-typography">
-    <span>Status: {{jobAd?.status}}</span>
-    <div>
-      Description: {{jobAd?.description}}
-    </div>
-    <div>
-      Required skills: {{jobAd?.skills?.join(', ')}}
-    </div>
+  <mat-dialog-content>
+    <span>Status: {{jobAd?.status | titlecase}}</span>
+    <p>Description: {{jobAd?.description}}</p>
+    <mat-chip-listbox>
+      <mat-chip-option *ngFor="let skill of jobAd?.skills" [selected]="true">{{skill}}</mat-chip-option>
+    </mat-chip-listbox>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Close</button>
   </mat-dialog-actions>
 </ng-container>
-
-
-
-
