--- a/frontend/src/app/shared/components/panel-content/panel-content.component.scss
+++ b/frontend/src/app/shared/components/panel-content/panel-content.component.scss
@@ -44,12 +44,22 @@ mat-card-header {
   padding: 0 5px;
 }
 
-@media (max-width: 1025px) {
+@media screen and (min-width: 371px) and (max-width: 1024px) {
   .panel-no-container {
     padding: 10px;
   }
 
+  .panel-card {
+    max-height: 85vh;
+  }
+
   .title {
     font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .panel-card {
+    max-height: 85vh;
   }
 }
