--- a/frontend/src/app/job-ad/components/job-ad-table/job-ad-table.component.html
+++ b/frontend/src/app/job-ad/components/job-ad-table/job-ad-table.component.html
@@ -15,39 +15,24 @@
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef>Description</th>
       <td mat-cell *matCellDef="let element">
-        <p *ngIf="element.description.length > 200; else shorterDescription"
-           matTooltip="{{element.description.slice(0,element.description.length)}}">{{element.description.slice(0, 200)}}
-          ...
+        <p *ngrxLet="element.description as description"
+           matTooltip="{{description.length > 200 ? description : undefined}}">
+          {{description.length > 200 ? description.slice(0, 200) + '...' : description}}
         </p>
-        <ng-template #shorterDescription>
-          <p>{{element.description}}</p>
-        </ng-template>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="skills">
       <th mat-header-cell *matHeaderCellDef>Skills</th>
       <td mat-cell *matCellDef="let element">
-        <div *ngIf="element.skills.length > 2; else oneSkill">
-          <mat-chip-listbox *ngFor="let skill of element.skills.slice(0,2); let i = index; let last = last">
-            <mat-chip>{{skill}}</mat-chip>
-            <mat-chip *ngIf="last"
-                      matTooltip="More required skills: {{element.skills.slice(2, element.skills.length).join(', ')}}">
-              +{{element.skills.length - 2}}</mat-chip>
-          </mat-chip-listbox>
-        </div>
-        <ng-template #oneSkill>
-          <mat-chip-listbox *ngFor="let skill of element.skills.slice(0,2); let i = index; let last = last">
-            <mat-chip>{{skill}}</mat-chip>
-          </mat-chip-listbox>
-        </ng-template>
+        <app-custom-chips [chips]="element.skills"></app-custom-chips>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
       <td mat-cell *matCellDef="let element">
-        <mat-chip [ngClass]="'chip-status-' + element.status">{{element.status | uppercase}}</mat-chip>
+        <div [ngClass]="'chip-status ' + element.status">{{element.status | uppercase}}</div>
       </td>
     </ng-container>
 
