--- a/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.scss
+++ b/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.scss
@@ -34,6 +34,7 @@
 
 .tools-container {
   display: flex;
+  align-items: stretch;
   justify-content: space-between;
 }
 
@@ -47,9 +48,5 @@
     flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
-
-    mat-form-field {
-      padding: 5px 2px 5px 2px !important;
-    }
   }
 }
