--- a/frontend/src/app/shared/components/panel-content/panel-content.component.html
+++ b/frontend/src/app/shared/components/panel-content/panel-content.component.html
@@ -1,4 +1,4 @@
-<div class="panel-container" [class]="isContainer ? 'panel-is-container' : 'panel-no-container'">
+<div class="panel-container">
   <mat-card class="mat-elevation-z8 panel-card">
     <mat-card-header>
       <mat-card-title class="title">{{title}}</mat-card-title>
@@ -9,8 +9,14 @@
         </button>
       </mat-card-actions>
     </mat-card-header>
+    <div class="wrapper">
+      <ng-content select="[tools]"></ng-content>
+    </div>
     <mat-card-content>
       <ng-content></ng-content>
     </mat-card-content>
+    <mat-card-footer>
+      <ng-content select="[footer]"></ng-content>
+    </mat-card-footer>
   </mat-card>
 </div>
