--- a/frontend/src/app/shared/components/panel-content/panel-content.component.scss
+++ b/frontend/src/app/shared/components/panel-content/panel-content.component.scss
@@ -1,30 +1,26 @@
 @import "src/variables";
 
-.panel-is-container {
+.panel-container {
+  display: flex;
+  justify-content: center;
   padding: 10px;
 }
 
-.panel-no-container {
-  padding: 10px 100px;
-}
-
 .panel-card {
-  max-height: 90vh;
-  padding: 22px;
+  width: 80vw;
+  font-size: 1rem;
+  max-height: 85vh;
 }
 
-.icon-panel {
-  color: white;
-  font-weight: bold;
+@media (min-width: 576px) {
+  .panel-card {
+    font-size: 1.2rem;
+  }
 }
 
-.button-panel {
-  margin-right: 22px !important;
-  outline: none;
-  transition: all .3s ease;
-
-  &:hover {
-    background-color: lighten(grey, 15);
+@media (min-width: 992px) {
+  .panel-card {
+    font-size: 1.5rem;
   }
 }
 
@@ -32,34 +28,28 @@ mat-card-header {
   justify-content: space-between;
   align-items: center;
   padding-bottom: 1rem;
-}
 
-.mat-card-header-text {
-  display: flex;
-  align-items: center;
-}
-
-.title {
-  font-size: 24px;
-  padding: 0 5px;
-}
-
-@media screen and (min-width: 371px) and (max-width: 1024px) {
-  .panel-no-container {
-    padding: 10px;
-  }
-
-  .panel-card {
-    max-height: 85vh;
+  .mat-card-header-text {
+    display: flex;
+    align-items: center;
   }
 
   .title {
-    font-size: 20px;
+    font-size: 24px;
+    padding: 0 5px;
   }
 }
 
-@media screen and (max-width: 375px) {
-  .panel-card {
-    max-height: 85vh;
-  }
+mat-card-content {
+  overflow-y: auto;
+  margin: 5px 0;
+}
+
+mat-card-footer {
+  position: sticky;
+  bottom: 0
+}
+
+.wrapper {
+  padding: 0 16px;
 }
